[metadata]
name = ndlab
version = 0.0.2
description = Qemu based network lab for netdisc development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zohassadar/ndlab
author = Richard
author_email = zohassadar@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.10
include_package_data = True
package_dir =
   =src
install_requires =
    PyYAML
    psutil
    click
    jinja2
    dacite
    tabulate

[options.package_data]
* = *.j2, *.jinja2

[options.entry_points]
console_scripts =
    ndlab = ndlab.cli.cli:main
